@@ -15,6 +15,7 @@
         ADDED - When picking coordinates (new node, move node, move timestamp etc), you can see the coordinates
         ADDED - Editor toolbar fixed to window, to make it easier to scroll around large maps
         ADDED - RRD Datasource has improved warnings for non-existent DS names
+        FIXED - RRD doesn't consider DSes other than the ones you named when finding a valid line.
         
 0.92 - FIXED weathermap CLI help said --random-data instead of --randomdata
        FIXED one last php short_tag in poller_common.php - thanks Bernado Diez
